// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stories Snapshots Documentazione/Componenti/Tooltip _EsempiInterattivi 1`] = `
<div>
  <div>
    <button
      class="m-3 btn btn-"
    >
      Tooltip
    </button>
  </div>
</div>
`;

exports[`Stories Snapshots Documentazione/Componenti/Tooltip Esempi 1`] = `
<div>
  <div
    class="bd-example tooltip-demo"
  >
    <p
      class="muted"
    >
      Ecco un
       
      <a
        href="#"
      >
        bianco scenario
      </a>
      <br />
      per tratteggiarvi l’accompagnamento
      <br />
      degli oggetti di sfondo che pur vivono.
      <br />
      Non ne sarò
       
      <a
        href="#"
      >
        l’artefice
      </a>
       
      impaziente.
      <br />
      Berrò alle coppe della nostalgia,
      <br />
      avrò preteso d’ozio nelle lacrime...
      <br />
      perché non mi ribello alla natura:
      <br />
      la mia lentezza li esaspera...
      <br />
      La mia lentezza? No, la mia fiducia.
      <br />
      Per adesso è deserto.
      <br />
      <a
        href="#"
      >
        Il mondo può rifarsi senza me
      </a>
      ,
      <br />
      E intanto gli altri mi denigreranno
    </p>
    <p>
      <em>
        La città nuova, Alda Merini
      </em>
    </p>
  </div>
</div>
`;

exports[`Stories Snapshots Documentazione/Componenti/Tooltip EsempiConControllo 1`] = `
<div>
  <div
    class="bd-example tooltip-demo"
  >
    <p
      class="muted"
    >
      Ecco un
       
      <a
        href="#"
      >
        bianco scenario
      </a>
      <br />
      per tratteggiarvi l’accompagnamento
      <br />
      degli oggetti di sfondo che pur vivono.
      <br />
      Non ne sarò
       
      <a
        href="#"
      >
        l’artefice
      </a>
       
      impaziente.
      <br />
      Berrò alle coppe della nostalgia,
      <br />
      avrò preteso d’ozio nelle lacrime...
      <br />
      perché non mi ribello alla natura:
      <br />
      la mia lentezza li esaspera...
      <br />
      La mia lentezza? No, la mia fiducia.
      <br />
      Per adesso è deserto.
      <br />
      <a
        href="#"
      >
        Il mondo può rifarsi senza me
      </a>
      ,
      <br />
      E intanto gli altri mi denigreranno
    </p>
    <p>
      <em>
        La città nuova, Alda Merini
      </em>
    </p>
  </div>
</div>
`;

exports[`Stories Snapshots Documentazione/Componenti/Tooltip Posizioni 1`] = `
<div>
  <div
    style="padding: 100px;"
  >
    <button
      class="m-3 btn btn-"
    >
      Tooltip in alto
    </button>
    <button
      class="m-3 btn btn-"
    >
      Tooltip a destra
    </button>
    <button
      class="m-3 btn btn-"
    >
      Tooltip in basso
    </button>
    <button
      class="m-3 btn btn-"
    >
      Tooltip a sinistra
    </button>
    <button
      class="m-3 btn btn-"
    >
      Tooltip con HTML
    </button>
  </div>
</div>
`;
